Add the ability to exit the app. This logs the current user out and finishes the (Parse) application context. Note the the 'Exit app' option may appear on press of menu button rather than in the action bar.
Also cleaned up code for Map and Exit app menu options.
Sort options are now always shown and changed SORT BY to VIEW BY.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,6 @@
     <string name="create_account_text">CREATE ACCOUNT</string>
     <string name="title_activity_sign_in">SignInActivity</string>
     <string name="default_pump_flavor_text">%1$s was installed in 2012 as part of the relief effort funded by the TKyS. %2$s uses MoMoOS 3.1.</string>
-
-    <string name="sort_by">Sort by</string>
+    <string name="sort_by">View By</string>
+    <string name="logout">Exit app</string>
 </resources>
